# grandorgue-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  GRANDORGUE_ANNOUNCEMENT.md  README.md  justfile  pyproject.toml  run_server.py  start.ps1
docs/: ARCHITECTURE.md  BACH_CATALOG.md  GRANDORGUE_GUIDE.md  MCP_TOOLS.md  MIDI_SETUP.md  SAMPLE_SETS.md
native/: Cargo.toml  build.ps1  tauri.conf.json
native/icons/: icon.icns
native/src/: main.rs
scripts/: generate_icons.py
src/grandorgue_mcp/: __init__.py  auto_load.py  go_process.py  midi_bridge.py  models.py  organ_manager.py  server.py
tests/: test_models.py
web_sota/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web_sota/e2e/: grandorgue.spec.ts
web_sota/src/: App.tsx  index.css
web_sota/src/api/: client.ts
web_sota/src/components/: AudioMixer.tsx  CombinationMemory.tsx  Dashboard.tsx  ManualKeyboard.tsx  Marketplace.tsx  OrganBrowser.tsx  OrganConsole.tsx  RecordPanel.tsx  Sidebar.tsx  StopPanel.tsx  Topbar.tsx
web_sota/src/hooks/: useWebSocket.ts
