[project]
name = "grandorgue-mcp"
version = "0.1.0"
description = "GrandOrgue pipe organ simulator MCP server — MIDI bridge, organ control, sample set management, modern web console"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.23",
    "httpx>=0.27",
    "pydantic>=2.0",
    "prefab-ui>=0.18.0",
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.9",
    "playwright>=1.50",
]

[project.scripts]
grandorgue-mcp = "grandorgue_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grandorgue_mcp"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "UP", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["E501"]
"tests/**/*.py" = ["E501", "S101"]
"src/grandorgue_mcp/server.py" = ["S603", "S110"]
"src/grandorgue_mcp/go_process.py" = ["S603", "S110"]
